add socat packag

--- a/install_dependencies.yml
+++ b/install_dependencies.yml
@@ -10,3 +10,9 @@
         log-level: info
     - role: andrewrothstein.kubernetes-helm
       kubernetes_helm_ver: v2.7.2
+  tasks:
+    - name: Install dependencies
+      apt:
+        name: "{{ item }}"
+      with_items:
+        - socat
