--- a/spinnaker/values.yaml
+++ b/spinnaker/values.yaml
@@ -12,7 +12,7 @@ accounts:
     - library/ubuntu
     - library/centos
     - library/nginx
-    - <dockerid>/site
+    - lxie321/site
 # - name: gcr
 #   address: https://gcr.io
 #   username: _json_key
