removed unneeded files

--- a/spinnaker/values.yaml
+++ b/spinnaker/values.yaml
@@ -23,7 +23,7 @@ accounts:
 # For more info visit:
 #   https://www.spinnaker.io/setup/features/notifications/#email
 mail:
-  enabled: false
+  enabled: true
   host: smtp.example.org
   username: admin
   password: admin
