--- a/spinnaker/values.yaml
+++ b/spinnaker/values.yaml
@@ -24,10 +24,11 @@ accounts:
 #   https://www.spinnaker.io/setup/features/notifications/#email
 mail:
   enabled: true
-  host: smtp.example.org
-  username: admin
-  password: admin
-  fromAddress: spinnaker@example.org
+  host: aspmx.l.google.com
+  username: notification@smashware.io
+  password:
+  fromAddress: notification@smashware.io
+  ssl: true
   port: 25
 
 slack:
