--- a/spinnaker/templates/configmap/spinnaker-config.yaml
+++ b/spinnaker/templates/configmap/spinnaker-config.yaml
@@ -298,26 +298,15 @@ data:
         cron:
           enabled: true
         notifications:
+          # allow pipeline triggers to run periodically via cron expressions
+          # If you wish for spinnaker to send notifications, configure the following blocks
           mail:
-            enabled: true
+            enabled: {{ .Values.mail.enabled }}
             host: {{ .Values.mail.host }}
-            from: {{ .Values.mail.fromAddress }}
-            port: 25
+            username: {{ .Values.mail.username }}
+            password: {{ .Values.mail.password }}
             fromAddress: {{ .Values.mail.fromAddress }}
-          spring:
-            mail:
-              username: {{ .Values.mail.username }}
-              password: {{ .Values.mail.password }}
-              properties:
-                mail:
-                  smtp:
-                    auth: true
-                    ssl:
-                      enable: {{ .Values.mail.ssl }}
-                    socketFactory:
-                      port: {{ .Values.mail.password }}
-                      class: javax.net.ssl.SSLSocketFactory
-                      fallback: false
+            port: {{ .Values.mail.port }}
           hipchat:
             enabled: false
             url: # the hipchat server to connect to
